@@ -16,6 +16,7 @@ Changes/New Features Since 3.1M3:
 CAY-1603 Improve custom ExtendedType registration API
 CAY-1608 Implement constructor injection support for DefaultAdhocObjectFactory
 CAY-1618 Create database adapters instances with proper injection
+CAY-1637 [PATCH] DataContextFactory is cumbersome to customize
 
 Bug Fixes Since 3.1M3:
 
